# the_news_hub

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  makefile  pyproject.toml  setup.md
airflow/: airflow_setup.sh
airflow/dags/: ingest_and_enrich_news_dag.py  ingest_api_news_dag.py  ingest_scrapper_news_dag.py  ingest_topics_dag.py  news_population_dag.py  test_dag.py  topics_enrichement_dag.py
airflow_dags/: ingest_api_news_dag.py  ingest_scrapper_news_dag.py  test_dag.py  topics_enrichement_dag.py
api/: .dockerignore  Dockerfile  api_utils.py  config.py  docker-compose.yml  main.py  security.py  test_api.py  the-news-hub-api.yml
api/models/: articles.py  range_date.py
api/retrievers/: articles.py  topics.py
api/routers/: articles.py  ask_hub.py  topics.py
dashboard/: middleware.ts  package.json
dashboard/app/: config.tsx  globals.css  layout.tsx  page.tsx
db/: chroma-container.yml  chroma_client.ipynb  mongo-container.yml  run_chroma_server.py
ingestors/: api_ingestor.py  base_ingestor.py  scrapper_ingestor.py
scripts/: constants.py  db_population.py  recomender_system.py  topic_description.py  topic_generation.py
scripts/db_population/: ingest_api_news.py  ingest_news.py  ingest_scrapper_news.py  ingest_topics.py  populate_topic.py  topics_enrichement.py
scripts/one_off/: delete_chroma_collection.py  delete_duplicated_docs.py  migrate_topics_from_chroma_to_mongo.py  translate_topics.py  update_fields.py
scripts/recomender_system/: constants.py  recomender_system.py
scripts/utils/: mail_sender.py
src/: api_client.py  chroma_database.py  chroma_rag.py  config.py  constants.py  custom_chatmodel.py  custom_embedder.py  finlight_api_client.py  llm_engine.py  llm_resources.py  news_scrapper.py  sql_client.py  topics_enricher.py  utils.py  vectorized_database.py
src/core/: chroma_database.py  finlight_api_client.py  mongo_client.py  scrapper.py  topics_enricher.py  translator.py
src/custom_modules/: custom_chatmodel.py  (+1 more)
templates/: news_templates.py
(+24 files in other folders)
